Fix alignment issue because of long text

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -640,6 +640,7 @@ section h3.section-subheading {
 .team-member {
     margin-bottom: 50px;
     text-align: center;
+    min-height: 620px;
 }
 
 .team-member img {
